--- a/AndroidSkeletonMVP/app/src/main/res/layout/try_again_view.xml
+++ b/AndroidSkeletonMVP/app/src/main/res/layout/try_again_view.xml
@@ -56,6 +56,7 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/grayLevel1"
         android:layout_marginTop="32dp"
         android:text="@string/try_again"
         app:layout_constraintBottom_toBottomOf="parent"
