--- a/AndroidSkeletonMVP/app/src/main/res/values-v23/styles.xml
+++ b/AndroidSkeletonMVP/app/src/main/res/values-v23/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowLightStatusBar">true</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:statusBarColor">@android:color/black</item>
     </style>
 </resources>
